# schemas-rs

./: Cargo.toml  README.md
bits/schemas/: BITS-book2-2-elements.xsd  BITS-book2-2.xsd
bits/schemas/standard-modules/: module-xi.xsd
bits/schemas/standard-modules/mathml3/: mathml3-common.xsd
dita/: LICENSE
dita-lce/schemas/dita_lce/lceGraphicInteraction/: lceGraphicAssociateDomain.xsd
dita/schemas/xsd1.2-url/base/xsd/: basemap.xsd  basetopic.xsd  commonElementMod.xsd  mapMod.xsd  topicMod.xsd  utilitiesDomain.xsd
dita/schemas/xsd1.2-url/bookmap/xsd/: bookmap.xsd  bookmapMod.xsd
dita/schemas/xsd1.2-url/learning/xsd/: learningAssessment.xsd  learningAssessmentMod.xsd  learningBaseMod.xsd  learningBookmap.xsd  learningContent.xsd  learningContentMod.xsd  learningDomain.xsd  learningMap.xsd  learningOverview.xsd  learningOverviewMod.xsd  learningPlan.xsd  learningPlanMod.xsd  learningSummary.xsd  learningSummaryMod.xsd
dita/schemas/xsd1.2-url/machineryIndustry/xsd/: machineryTask.xsd  machineryTaskbodyConstraintIntMod.xsd  machineryTaskbodyConstraintMod.xsd
dita/schemas/xsd1.2-url/subjectScheme/xsd/: classifyDomain.xsd  classifyMap.xsd  subjectScheme.xsd  subjectSchemeMod.xsd
dita/schemas/xsd1.2-url/technicalContent/xsd/: concept.xsd  conceptMod.xsd  ditabase.xsd  generalTask.xsd  glossentry.xsd  glossentryMod.xsd  glossgroup.xsd  map.xsd  reference.xsd  referenceMod.xsd  task.xsd  taskMod.xsd  taskreqDomain.xsd  topic.xsd
niso/: LICENSE
schemas/: Cargo.toml
schemas-akoma-ntoso/: Cargo.toml
schemas-akoma-ntoso/src/: lib.rs
schemas-bits/: Cargo.toml
schemas-bits/src/: lib.rs
schemas-core/: Cargo.toml
schemas-core/src/: lib.rs
schemas-dita/: Cargo.toml  build.rs
schemas-dita-lce/: Cargo.toml  build.rs
schemas-dita-lce/src/: lib.rs
schemas-dita/src/: lib.rs
schemas-dita13/: Cargo.toml
schemas-dita13/src/: lib.rs
schemas-docbook/: Cargo.toml
schemas-docbook/src/: lib.rs
schemas-jats/: Cargo.toml
schemas-jats/src/: lib.rs
schemas-niso-sts/: Cargo.toml  build.rs
schemas-niso-sts/src/: lib.rs
schemas-spl/: Cargo.toml
schemas-spl/src/: lib.rs
schemas-tei/: Cargo.toml
schemas-tei/src/: lib.rs
schemas/src/: lib.rs
