[workspace]
resolver = "2"
members = [
    "schemas-core",
    "schemas-dita",
    "schemas-dita13",
    "schemas-dita-lce",
    "schemas-niso-sts",
    "schemas-jats",
    "schemas-bits",
    "schemas-docbook",
    "schemas-akoma-ntoso",
    "schemas-tei",
    "schemas-spl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["ParapluOU"]
repository = "https://github.com/parapluou/schemas-rs"

[workspace.dependencies]
schemas-core = { path = "schemas-core" }
thiserror = "2"
