[package]
name = "schemas-core"
description = "Core traits and types for XML schema bundles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
include_dir = "0.7.4"
thiserror.workspace = true
