[package]
name = "schemas-dita-lce"
description = "DITA Learning Content Education (LCE) schemas - statically embedded"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
authors.workspace = true
repository.workspace = true

[dependencies]
include_dir = "0.7.4"
schemas-core.workspace = true
