[package]
name = "schemas-dita"
description = "OASIS DITA 1.2 XML schemas - statically embedded"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "OASIS-IPR"  # Using original schema license
authors.workspace = true
repository.workspace = true

[dependencies]
include_dir = "0.7.4"
schemas-core.workspace = true
