[package]
name = "schemas-docbook"
description = "DocBook 5.1 schemas - statically embedded"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BSD-2-Clause"  # OASIS DocBook TC
authors.workspace = true
repository.workspace = true

[dependencies]
include_dir = "0.7.4"
schemas-core.workspace = true
