[package]
name = "schemas-jats"
description = "JATS (Journal Article Tag Suite) 1.4 schemas - statically embedded"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "CC0-1.0"  # Public Domain (NLM/NIH)
authors.workspace = true
repository.workspace = true

[dependencies]
include_dir = "0.7.4"
schemas-core.workspace = true
