[package]
name = "schemas-niso-sts"
description = "NISO Standards Tag Suite (STS) schemas - statically embedded"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "NISO"  # Open use encouraged
authors.workspace = true
repository.workspace = true
include = ["src/**/*", "Cargo.toml", "build.rs"]

[dependencies]
schemas-core.workspace = true

[build-dependencies]
walkdir = "2"
