[package]
name = "schemas-niso-sts"
description = "NISO Standards Tag Suite (STS) schemas - statically embedded"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "NISO"  # Open use encouraged
authors.workspace = true
repository.workspace = true

[dependencies]
include_dir = "0.7.4"
schemas-core.workspace = true
